--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   responsive_framework: ^1.5.1
   algoliasearch: ^1.24.1
   hexcolor: ^3.0.1
+  cloud_functions: ^5.1.5
 
   #firebase
   firebase_core: ^3.8.0
