--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   mobile_scanner: ^6.0.2
   rxdart: ^0.28.0
   image_picker: ^1.1.2
+  geoflutterfire_plus: ^0.0.32
 
   #firebase
   firebase_core: ^3.8.0
