--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   rxdart: ^0.28.0
   image_picker: ^1.1.2
   geoflutterfire_plus: ^0.0.32
+  geocoding: ^3.0.0
 
   #firebase
   firebase_core: ^3.8.0
