--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   image_picker: ^1.1.2
   geoflutterfire_plus: ^0.0.32
   geocoding: ^3.0.0
+  android_intent_plus: ^5.2.1
 
   #firebase
   firebase_core: ^3.8.0
