--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,6 +37,18 @@
 			</array>
 		</dict>
 	</array>
+    <key>branch_key</key>
+    <dict>
+        <key>live</key>
+        <string>key_live_jsg2BJbaNh5utc479YfL9eefEEoVJlRv</string>
+        <key>test</key>
+        <string>key_live_jsg2BJbaNh5utc479YfL9eefEEoVJlRv</string>
+    </dict>
+    <key>branch_universal_link_domains</key>
+    <array>
+        <string>r0aur.app.link</string>
+        <string>r0aur-alternate.app.link</string>
+    </array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>GIDClientID</key>
