--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,7 +42,7 @@
 		<key>NSCameraUsageDescription</key>
 		<string>This app needs camera access to scan QR codes</string>
 		<key>NSLocationWhenInUseUsageDescription</key>
-		<string>This app needs access to location when open.</string>
+		<string>This app needs access to location to determine nearby stores.</string>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>Allow access to photo library to update profile picture</string>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
