--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   geoflutterfire_plus: ^0.0.32
   geocoding: ^3.0.0
   android_intent_plus: ^5.2.1
+  auto_size_text: ^3.0.0
 
   #firebase
   firebase_core: ^3.8.0
